# agent_hypothesis2

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.sandbox  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_skill_schemas.py  003_agent_memory.py  004_knowledge_store.py  005_task_history_index.py  006_memory_fts.py  007_scheduled_tasks.py  008_fts_russian_config.py
src/: config.py  main.py
src/agent/: callbacks.py  core.py  planner.py  prompt_logger.py  prompts.py  summarizer.py  supervisor.py
src/agent/prompts/: __init__.py  en.py  ru.py
src/agent/tools/: cancel_scheduled_task.py  confirm_scheduled_task.py  delegate_to_coder.py  delegate_to_file_analyzer.py  delete_skill.py  execute_code.py  export_findings.py  fetch_url.py  get_current_datetime.py  get_findings.py  list_scheduled_tasks.py  list_skills.py  read_file.py  recall_memory.py  run_existing_skill.py  run_skill.py  save_knowledge.py  save_memory.py  save_skill.py  schedule_task.py  search_knowledge.py  search_skills.py  show_plan.py  store_finding.py  update_context.py  web_search.py  write_file.py
src/bot/: app.py  formatters.py  middlewares.py
src/bot/handlers/: agent_settings.py  (+8 more)
src/db/: connection.py  models.py  schema.sql
src/sandbox/: manager.py  workspace.py
src/services/: reflection.py  scheduler.py  skill_executor.py  task_runner.py  validation.py
src/transport/: manager.py  protocol.py  telegram.py  web.py
src/utils/: logging.py  security.py
src/web/: app.py
(+12 files in other folders)
