[project]
name = "agent-hypothesis2"
version = "0.1.0"
description = "Local LangChain agent system with Telegram bot, Docker sandbox, and skills registry"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2",
    "langchain-openai>=0.3",
    "aiogram>=3.20",
    "asyncpg>=0.30",
    "docker>=7.0",
    "pydantic-settings>=2.5",
    "alembic>=1.14",
    "psycopg[binary]>=3.1",
    "ddgs>=9.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "httpx>=0.27",
]

[project.scripts]
agent = "src.main:run"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
